tp perso c'est parti !

--- a/style.css
+++ b/style.css
@@ -1,1 +1,73 @@
-
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+main{
+    background-color: rosybrown;
+    height: 100vh;  
+}
+aside{
+    width: 15%;
+    height: 100vh;
+    background-color: black;   
+    color: white; 
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+.un{
+    text-align: center;
+    position: relative;
+    top: 5%;
+}
+h1{
+    font-size: x-large;
+}
+p{
+    font-size: larger;
+    padding-top: 10%;
+    line-height: 30px;
+}
+button{
+    background-color: crimson;
+    border-radius: 20%;
+    border: crimson;
+    font-size: large;
+    margin-top: 5%;
+}
+nav{
+    width: 80%;
+    margin: auto;
+    padding-top: 15%;
+}
+nav ul{
+    
+}
+nav ul li{
+    list-style: none; 
+    padding-top: 5%;
+}
+nav ul li a{
+    text-decoration: none;
+    color: white;
+}
+section{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
