--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 main{
-    background-color: rosybrown;
     height: 100vh;  
 }
 aside{
@@ -68,6 +67,51 @@ nav ul li a{
     color: white;
 }
 section{
+    padding-left: 17%;
+    padding-right: 2%;
+    padding-top: 1%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 50px 150px 150px 150px 150px;  
+    grid-column-gap: 5px;
+    grid-row-gap: 25px;
 }
+h1{
+    grid-column-start: 1;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#ligne1{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start:2;
+    grid-row-end: 3;
+}
+#un{
+    grid-column: 1;
+    grid-row: 1/2;
+    background: linear-gradient(0.25turn, #c42f2f, #119945);
+
+}
+#ligne2{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start:3;
+    grid-row-end: 4;
+    background: linear-gradient(0.25turn, #ffffff, #898a89, #6b6a6a);
+}
+#ligne3{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start:4;
+    grid-row-end: 5;
+    background: linear-gradient(0.25turn, #ffffff, #898a89, #6b6a6a);
+}
+#ligne4{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start:5;
+    grid-row-end: 6;
+    background: linear-gradient(0.25turn, #ffffff, #898a89, #6b6a6a);
+}
+
